# jsxrs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: attributes.rs  codegen.rs  config.rs  document.rs  error.rs  escape.rs  eval.rs  export.rs  head.rs  jsx_expr.rs  lib.rs  parser.rs  renderer.rs  resolver.rs  tailwind.rs
src/router/: discovery.rs  handler.rs  layout.rs  mod.rs
tests/: attributes.rs  codegen.rs  document.rs  errors.rs  expressions.rs  expressions_advanced.rs  head.rs  render_basic.rs  resolver.rs  router.rs  tailwind.rs
tests/common/: mod.rs
tests/fixtures/: invalid.jsx  tailwind.jsx  typed.tsx  typed_interface.tsx  with_child_head.jsx  with_head.jsx  with_import.jsx  with_props.jsx
tests/fixtures/app/: layout.tsx
tests/fixtures/app/blog/: layout.tsx  page.tsx
tests/fixtures/app/blog/[slug]/: page.tsx
tests/fixtures/components/: button.jsx  with_head_child.jsx
