[package]
edition = "2024"
name = "jsxrs"
version = "0.1.0"

[dependencies]
bytes-str = "0.2.7"
encre-css = "0.20.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "35.0.0"
thiserror = "2.0.18"


[profile.release]
codegen-units = 1
lto = true
strip = true

[package.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "takumi3488/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]
