[package]
description = "A Rust library for rendering JSX/TSX to complete HTML documents at build-time or server-side."
edition = "2024"
license = "Apache-2.0"
name = "jsxrs"
version = "0.1.4"

[features]
axum = ["dep:axum", "dep:tokio"]
default = []

[dependencies]
axum = { version = "0.8", optional = true }
bytes-str = "0.2.7"
encre-css = "0.20.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
swc_common = "21.0.0"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "38.0.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
axum = "=0.8.8"
axum-test = "=20.0.0"
tokio = { version = "=1.51.1", features = ["full"] }


[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[package.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]
